--- a/pom.xml
+++ b/pom.xml
@@ -2,24 +2,22 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ca.etsmtl.log720.lab1</groupId>
-  <artifactId>equipeSAJ-log720-A11-lab1</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>ca.etsmtl.log720.lab1</groupId>
+	<artifactId>equipeSAJ-log720-A14-lab1</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>Log720</name>
-  <url>http://maven.apache.org</url>
+	<name>Log720</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<modules>
+		<module>LOG720-A14-lab1-idl</module>
+		<module>LOG720-A14-Lab1-serveur</module>
+		<module>LOG720-A14-Lab1-client-poste</module>
+		<module>LOG720-A14-Lab1-client-voiture</module>
+	</modules>
 </project>
